stylesheet.less
/* ... */
.menu-item {
	padding: 10px 40px;
	float: left;
	width: 100%;
}

.menu-item-image-wrap {
	margin-bottom: 5px;
}

.menu-item-price {
	padding-bottom: 8px;
	p {
		font-family:@font-swatch6-font-family;
		font-size: bkscale(@font-swatch6-font-size, 0.9);
		color: darken(@color-swatch5, 30%);
		font-weight:@font-swatch6-font-weight;
		letter-spacing:@font-swatch6-letter-spacing;
	}
}

.menu .menu-subsection {
	padding: 0;
	margin-bottom: 40px;
}

.menu-subsection-name {
	color: @color-swatch4;
}

.menu-item-promoted,
.blog-post-metadata,
.menu-subsection .menu-items {
	background: lighten(@color-swatch1, 5%);
	border: 1px solid darken(@color-swatch1, 15%);
	border-radius: 3px;
}

.menu-subsection .menu-items {
	padding: 0 15px;
}

.menu .menu-items li {
	padding: 5px 0 12px;
	margin:20px 0px;
	&.menu-item-promoted {
		padding: 5px 15px 12px;
	}
}

.inner-item {
	padding: 15px 0;
}

.menu .menu-section-item-dietary-props .dietary-icon,
.menu .menu-info .dietary-icon {
	padding: 1px 5px 1px 0;
	&:before, &:after {
		color: @color-swatch2;
	}
	&:before {
		content: "\2605";
	}
}

.menu-item-description {
	padding-bottom: 10px;
}

// Menu sections navigation

.widget.menusections {
    text-align: center;
    padding: 0.5em 0 0;
    @media @tablet {
        margin-top: 1.5em;
    }
    @media only screen and (max-width: 550px) {
        padding:0;
        margin-top:0;
        padding: 0 0 0;
    }
    ul {
        display: table;
        width: 100%;
        margin: 0 auto;
        list-style: none;
        padding: 0;
        li {
            display: inline-block;
            padding: 0 15px 10px 0;
            margin: 0;
            &:last-child {
                padding-right: 0;
                @media only screen and (max-width: 550px) {
                    border-bottom: 1px solid darken(@color-swatch1,7%);
                }
            }
            @media only screen and (max-width: 550px) {
                width: 100%;
                border-top: 1px solid darken(@color-swatch1,7%);
                padding: 15px 0 10px 0;
            }
        }
    }
}

// 6. Blog List
.blog-post-item {
	padding-bottom: 20px;
}

.widget.blogpostlist,
.blogpost-page .blog-post-item {
	padding: 20px 0;
}

div.blog-post-feature-image-wrap {
	height: 350px;
	margin-bottom: 20px;
}

.blog-list-footer {
	text-align: center;
	clear: both;
	a {
		margin: 0 20px;
	}
}

.blog-post-item {
	padding-bottom: 40px;
	clear: both;
}


// 7. Blog Post
.blog-post-metadata {
	padding: 10px 20px;
	margin-top: 10px;
	time, p {
		color: lighten(@color-swatch5, 10%);
	}
}

.blog-post-sharing {
	display: inline-block;
	margin: 2em 0;
}

// 8. Forms
.widget.ecomproduct .ecom-product .ecom-product-info .ecom-product-variation select,
.widget.ecomcheckout .delivery select,
select,
input,
input[type=email],
input[type=text],
input[type=search],
textarea,
.contactform input,
.contactform textarea,
.widget.profile form fieldset input {
	text-indent: 0;
	padding: 8px 9px 10px;
	background-color: lighten(@color-swatch1, 5%);
	border: 1px solid darken(@color-swatch1, 15%);
	outline: none;
	-webkit-transition: border .2s;
	-moz-transition: border .2s;
	-ms-transition: border .2s;
	transition: border .2s;
	border-radius: 3px;
	line-height: 18px;
	height: 42px;
	&:hover, &:focus {
		border: 1px solid darken(@color-swatch1, 25%);
	}
	@media @tablet {
		width: 100%;
	}
}

.contactform textarea {
	margin-bottom: 5px;
}

select::-ms-expand {
	display: none;
}

.widget.ecomproduct .ecom-product .ecom-product-info .ecom-product-variation select,
select {
	-moz-appearance: none;
	text-indent: 0.01px;
	text-overflow: '';
}

.widget.profile, .widget.signupform {
	input[type=email], input[type=search] {
		width: 100%;
		height: auto;
		margin-bottom: 10px;
	}
}

.widget.ecomproductslist .productlist-display-form .form-group input, .widget.blogsearch .blog-search-form .form-group input {
	-webkit-appearance:none;
     height: 42px;
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
    margin-bottom: 10px;
    margin-right: 5px;
    @media @mobile {
    	width: 100%;
    	margin-right: 0;
    }
}

textarea {
	resize: vertical;
}

.widget.ecomproduct .ecom-product .ecom-product-info .ecom-product-variation select,
.widget.ecomcheckout .delivery select,
select {
	cursor: pointer;
	position: relative;
	background-color: darken(@color-swatch1, 10%);
	border: 1px solid darken(@color-swatch1, 15%);
	margin-bottom: 12px;
	padding-right: 33px;
	border-radius: 3px;
	height: 42px;
	@media @tablet {
		width: 100%;
	}
}

input[type="search"]::-webkit-search-decoration {
	display: none;
}

::-webkit-input-placeholder {
	color: darken(@color-swatch1, 30%);
}
:-moz-placeholder {
	color: darken(@color-swatch1, 30%);
}
::-moz-placeholder {
	color: darken(@color-swatch1, 30%);
}
:-ms-input-placeholder {
	color: darken(@color-swatch1, 30%);
}
/* ... */

